Fix some spacing, esp on mobile.

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -70,6 +70,7 @@ body {
 
 .page__title {
   margin-top: 0;
+  margin-bottom: 0;
   line-height: 1;
 
   a {
@@ -78,7 +79,9 @@ body {
   }
 
   & + .page__meta {
-    margin-top: -0.5em;
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    font-size: $type-size-7;
   }
 }
 
